--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Apr 30 19:58:59 CEST 2018
-sdk.dir=E\:\\Android\\Project_SKD
+#Sat May 12 14:36:13 CEST 2018
+sdk.dir=C\:\\Users\\Rrrumz\\AppData\\Local\\Android\\Sdk
