--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jun 24 20:55:13 CEST 2018
-sdk.dir=E\:\\Android\\Project_SKD
+#Sun Jul 08 16:01:50 CEST 2018
+sdk.dir=/Users/admin/Library/Android/sdk
