--- a/UnityServer/Assembly-CSharp.csproj
+++ b/UnityServer/Assembly-CSharp.csproj
@@ -10,7 +10,7 @@
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace>
     </RootNamespace>
-    <ProjectGuid>{33CC69F9-5F3F-3393-B118-45B969EEA24E}</ProjectGuid>
+    <ProjectGuid>{D64E0462-B61B-2F72-7376-919A42DA6026}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -84,10 +84,10 @@
     <Compile Include="Assets\Scripts\TCPServer.cs" />
     <Compile Include="Assets\ServerStringInlet.cs" />
     <Reference Include="UnityEditor.StandardEvents">
-      <HintPath>E:/Program Files (x86)/Eigene Dokumente/Mega/Unity/AI Seminar/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
+      <HintPath>E:/Program Files (x86)/Eigene Dokumente/Mega/Studium/Leistungen/KI/SpeechRecognition/UnityServer/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PackageManagerUI.Editor">
-      <HintPath>E:/Program Files (x86)/Eigene Dokumente/Mega/Unity/AI Seminar/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+      <HintPath>E:/Program Files (x86)/Eigene Dokumente/Mega/Studium/Leistungen/KI/SpeechRecognition/UnityServer/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>E:/Program Files/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
